Adding seperate residual calculation
Added residual and testfiles

Removed false risidual, + cstr residual v<0 => error

Seperated error testing in another class

Throw not implemented error @viscosity

Notinitialized Error now inherits from CADETPython
SimulatorError

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,3 +64,8 @@ markers = [
 
 [tool.setuptools.dynamic]
 version = { attr = "CADETPythonSimulator.__version__" }
+
+[tool.ruff]
+# Same as Black.
+line-length = 88
+indent-width = 4
