implemented componentsystem that inherits from cadet process and fixes the small bug with the molecular weight, added molecular volume
first implementation of the def unit_operation
and residual equations still

both still need testing and unit_operation def
doesn't have rejection model yet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,3 +69,7 @@ version = { attr = "CADETPythonSimulator.__version__" }
 # Same as Black.
 line-length = 88
 indent-width = 4
+
+[tool.ruff.lint]
+select = ["E", "F", "W"]
+ignore = ["F401"]
