--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,6 @@ line-length = 88
 indent-width = 4
 
 [tool.ruff.lint]
-# preview = true
+preview = true
 select = ["E", "F", "W", "D"]
 ignore = ["F401", "D212", "D100"]
