--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,17 +1,10 @@
 name: Ruff
-on: [ push ]
+on: [ push, pull_request ]
 jobs:
   ruff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install Python
-        uses: actions/setup-python@v5
+      - uses: astral-sh/ruff-action@v3
         with:
-          python-version: "3.11"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff
-      - name: Run Ruff
-        run: ruff check --output-format=github  .
+          args: check --output-format=github
