Add tests to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,8 @@ version = { attr = "CADETPythonSimulator.__version__" }
 
 [tool.ruff]
 # Same as Black.
-src = ["CADETPythonSimulator"]
+src = ["CADETPythonSimulator", "tests"]
+
 line-length = 88
 indent-width = 4
 
