--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -1,5 +1,10 @@
 name: Ruff
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - master
+      - dev
+  pull_request:
 jobs:
   ruff:
     runs-on: ubuntu-latest
