--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,4 +76,4 @@ indent-width = 4
 [tool.ruff.lint]
 preview = true
 select = ["E", "F", "W", "D"]
-ignore = ["F401", "D212", "D203", "D100"]
+ignore = ["D212", "D203", "D100"]
